// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. a full article with all content items with dropcap template 1`] = `
<div>
  <div
    id="article-marketing-header"
  />
  <article
    data-article-identifier="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
    data-article-sectionname="Some Section"
    data-article-template="maincomment"
    id="article-main"
  >
    <Head />
    <div>
      <AdContainer
        slotName="header"
      />
    </div>
    <main
      role="main"
    >
      <div>
        <div>
          <div
            data-tc-sticky-placeholder={true}
          />
          <div
            data-tc-sticky-container={true}
          >
            <div>
              <div
                data-tc-sticky-sizer={true}
              >
                <SaveAndShareBar
                  articleHeadline="Some Headline"
                  articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
                  articleUrl="https://url.io"
                  savingEnabled={true}
                  sharingEnabled={true}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        role="article"
      >
        <p>
          <span>
            T
          </span>
          his being Black History Month, last week
        </p>
        <div>
          <InteractiveWrapper
            attributes={
              Object {
                "chart-id": "csmgb",
              }
            }
            element="times-datawrapper"
            source="https://interactive.io"
          />
        </div>
        <div
          id="2"
        >
          <div>
            <ArticleImage
              captionOptions={
                Object {
                  "caption": "An image caption",
                  "credits": "The image credits",
                }
              }
              imageOptions={
                Object {
                  "display": "primary",
                  "highResSize": null,
                  "lowResSize": 100,
                  "ratio": "1500:1000",
                  "uri": "https://image.io",
                }
              }
            />
          </div>
        </div>
        <div
          id="3"
        >
          <div>
            <ArticleImage
              captionOptions={
                Object {
                  "caption": "A secondary image caption",
                  "credits": "The secondary image credits",
                }
              }
              imageOptions={
                Object {
                  "display": "secondary",
                  "highResSize": null,
                  "lowResSize": 100,
                  "ratio": "1500:1000",
                  "uri": "https://image.io/secondary",
                }
              }
            />
          </div>
        </div>
        <div
          id="4"
        >
          <div>
            <ArticleImage
              captionOptions={
                Object {
                  "caption": "An inline image caption",
                  "credits": "The inline image credits",
                }
              }
              imageOptions={
                Object {
                  "display": "inline",
                  "highResSize": null,
                  "lowResSize": 100,
                  "ratio": "1500:1000",
                  "uri": "https://image.io/inline",
                }
              }
            />
          </div>
        </div>
        <p>
          <Link
            target="_blank"
            underlined={true}
            url="https://link.io"
          >
            Some Link
          </Link>
        </p>
        <p>
          Some content
        </p>
        <AdContainer
          slotName="inline-ad"
        />
        <div>
          <div>
            <PullQuote
              caption="AName"
              quoteColour="#FF0000"
              text="a text"
              twitter="@AName"
            >
              The pull quote content
            </PullQuote>
          </div>
        </div>
        <div>
          <figure>
            <div>
              <div>
                <div
                  data-is-360={false}
                >
                  <div>
                    <video
                      controls={true}
                      data-account="57838016001"
                      data-application-id={true}
                      data-embed="default"
                      data-player="default"
                      data-video-id="4084164751001"
                      id="4084164751001-57838016001-3dbfe6b8-680b-11e9-b277-88f3d445182c"
                      poster="https://image.io"
                    />
                  </div>
                </div>
              </div>
            </div>
            <figcaption>
              <div>
                <Caption
                  text="This is video caption"
                />
              </div>
            </figcaption>
          </figure>
        </div>
        <KeyFacts
          ast={
            Object {
              "attributes": Object {
                "title": "Example title",
              },
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "children": Array [
                        Object {
                          "attributes": Object {
                            "value": "Example bullet text",
                          },
                          "children": Array [],
                          "name": "text",
                        },
                      ],
                      "name": "listElement",
                    },
                    Object {
                      "children": Array [
                        Object {
                          "attributes": Object {
                            "value": "An example ",
                          },
                          "children": Array [],
                          "name": "text",
                        },
                        Object {
                          "attributes": Object {
                            "href": "https://example.io",
                            "target": "_blank",
                            "type": "topic",
                          },
                          "children": Array [
                            Object {
                              "attributes": Object {
                                "value": "link",
                              },
                              "children": Array [],
                              "name": "text",
                            },
                          ],
                          "name": "link",
                        },
                      ],
                      "name": "listElement",
                    },
                    Object {
                      "children": Array [
                        Object {
                          "attributes": Object {
                            "value": "More example text.",
                          },
                          "children": Array [],
                          "name": "text",
                        },
                      ],
                      "name": "listElement",
                    },
                    Object {
                      "children": Array [
                        Object {
                          "attributes": Object {
                            "value": "Example text ",
                          },
                          "children": Array [],
                          "name": "text",
                        },
                        Object {
                          "attributes": Object {},
                          "children": Array [
                            Object {
                              "attributes": Object {
                                "value": "this is bold ",
                              },
                              "children": Array [],
                              "name": "text",
                            },
                          ],
                          "name": "bold",
                        },
                        Object {
                          "attributes": Object {},
                          "children": Array [
                            Object {
                              "attributes": Object {
                                "value": "this is in italics.",
                              },
                              "children": Array [],
                              "name": "text",
                            },
                          ],
                          "name": "italic",
                        },
                      ],
                      "name": "listElement",
                    },
                  ],
                  "name": "unorderedList",
                },
              ],
              "name": "keyFacts",
            }
          }
        />
        <h2>
          This is heading 2
        </h2>
        <h3>
          This is heading 3
        </h3>
        <h4>
          This is heading 4
        </h4>
        <h5>
          This is heading 5
        </h5>
        <h6>
          This is heading 6
        </h6>
        <div
          id="paywall-portal-article-footer"
        />
        <ArticleExtras
          articleHeadline="Some Headline"
          articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
          articleUrl="https://url.io"
          commentsEnabled={true}
          relatedArticleSlice={
            Object {
              "items": Array [
                Object {
                  "article": Object {
                    "__typename": "Article",
                    "bylines": Array [],
                    "hasVideo": false,
                    "headline": "RA Headline",
                    "id": "ra-1",
                    "label": "RA Label",
                    "leadAsset": Object {
                      "__typename": "Image",
                      "crop169": Object {
                        "__typename": "Crop",
                        "url": "https://racrop169.io",
                      },
                      "crop32": Object {
                        "__typename": "Crop",
                        "url": "https://racrop32.io",
                      },
                      "title": "RA Title",
                    },
                    "publicationName": "TIMES",
                    "publishedTime": "2015-03-23T19:39:39.000Z",
                    "savingEnabled": true,
                    "sharingEnabled": true,
                    "shortHeadline": "Headline",
                    "shortIdentifier": "2k629tpvh",
                    "slug": "this-is-slug",
                    "summary105": Array [],
                    "summary125": Array [],
                    "summary145": Array [],
                    "summary160": Array [],
                    "summary175": Array [],
                    "summary225": Array [],
                    "url": "https://ra.io",
                  },
                },
              ],
              "sliceName": "StandardSlice",
            }
          }
          relatedArticlesVisible={false}
          savingEnabled={true}
          sharingEnabled={true}
          spotAccountId=""
          topics={
            Array [
              Object {
                "name": "Topic",
                "slug": "topic",
              },
            ]
          }
        />
      </article>
    </main>
    <AdContainer
      slotName="pixel"
    />
    <AdContainer
      slotName="pixelteads"
    />
    <AdContainer
      slotName="pixelskin"
    />
  </article>
</div>
`;

exports[`2. an article with interactives 1`] = `
<div>
  <div
    id="article-marketing-header"
  />
  <article
    data-article-identifier="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
    data-article-sectionname="Some Section"
    data-article-template="mainstandard"
    id="article-main"
  >
    <Head />
    <div>
      <AdContainer
        slotName="header"
      />
    </div>
    <main
      role="main"
    >
      <div>
        <div>
          <div
            data-tc-sticky-placeholder={true}
          />
          <div
            data-tc-sticky-container={true}
          >
            <div>
              <div
                data-tc-sticky-sizer={true}
              >
                <SaveAndShareBar
                  articleHeadline="Some Headline"
                  articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
                  articleUrl="https://url.io"
                  savingEnabled={true}
                  sharingEnabled={true}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        role="article"
      >
        <div>
          <InteractiveWrapper
            attributes={
              Object {
                "chart-id": "csmgb",
              }
            }
            element="times-datawrapper"
            source="https://interactive.io"
          />
        </div>
        <div>
          <InteractiveWrapper
            attributes={
              Object {
                "chart-id": "csmgb",
              }
            }
            element="times-datawrapper"
            source="https://interactive.io"
          />
        </div>
        <div
          id="paywall-portal-article-footer"
        />
        <ArticleExtras
          articleHeadline="Some Headline"
          articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
          articleUrl="https://url.io"
          commentsEnabled={true}
          relatedArticleSlice={
            Object {
              "items": Array [
                Object {
                  "article": Object {
                    "__typename": "Article",
                    "bylines": Array [],
                    "hasVideo": false,
                    "headline": "RA Headline",
                    "id": "ra-1",
                    "label": "RA Label",
                    "leadAsset": Object {
                      "__typename": "Image",
                      "crop169": Object {
                        "__typename": "Crop",
                        "url": "https://racrop169.io",
                      },
                      "crop32": Object {
                        "__typename": "Crop",
                        "url": "https://racrop32.io",
                      },
                      "title": "RA Title",
                    },
                    "publicationName": "TIMES",
                    "publishedTime": "2015-03-23T19:39:39.000Z",
                    "savingEnabled": true,
                    "sharingEnabled": true,
                    "shortHeadline": "Headline",
                    "shortIdentifier": "2k629tpvh",
                    "slug": "this-is-slug",
                    "summary105": Array [],
                    "summary125": Array [],
                    "summary145": Array [],
                    "summary160": Array [],
                    "summary175": Array [],
                    "summary225": Array [],
                    "url": "https://ra.io",
                  },
                },
              ],
              "sliceName": "StandardSlice",
            }
          }
          relatedArticlesVisible={false}
          savingEnabled={true}
          sharingEnabled={true}
          spotAccountId=""
          topics={
            Array [
              Object {
                "name": "Topic",
                "slug": "topic",
              },
            ]
          }
        />
      </article>
    </main>
    <AdContainer
      slotName="pixel"
    />
    <AdContainer
      slotName="pixelteads"
    />
    <AdContainer
      slotName="pixelskin"
    />
  </article>
</div>
`;

exports[`3. an article with no content 1`] = `
<div>
  <div
    id="article-marketing-header"
  />
  <article
    data-article-identifier="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
    data-article-sectionname="Some Section"
    data-article-template="mainstandard"
    id="article-main"
  >
    <Head />
    <div>
      <AdContainer
        slotName="header"
      />
    </div>
    <main
      role="main"
    >
      <div>
        <div>
          <div
            data-tc-sticky-placeholder={true}
          />
          <div
            data-tc-sticky-container={true}
          >
            <div>
              <div
                data-tc-sticky-sizer={true}
              >
                <SaveAndShareBar
                  articleHeadline="Some Headline"
                  articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
                  articleUrl="https://url.io"
                  savingEnabled={true}
                  sharingEnabled={true}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        role="article"
      >
        <div
          id="paywall-portal-article-footer"
        />
        <ArticleExtras
          articleHeadline="Some Headline"
          articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
          articleUrl="https://url.io"
          commentsEnabled={true}
          relatedArticleSlice={
            Object {
              "items": Array [
                Object {
                  "article": Object {
                    "__typename": "Article",
                    "bylines": Array [],
                    "hasVideo": false,
                    "headline": "RA Headline",
                    "id": "ra-1",
                    "label": "RA Label",
                    "leadAsset": Object {
                      "__typename": "Image",
                      "crop169": Object {
                        "__typename": "Crop",
                        "url": "https://racrop169.io",
                      },
                      "crop32": Object {
                        "__typename": "Crop",
                        "url": "https://racrop32.io",
                      },
                      "title": "RA Title",
                    },
                    "publicationName": "TIMES",
                    "publishedTime": "2015-03-23T19:39:39.000Z",
                    "savingEnabled": true,
                    "sharingEnabled": true,
                    "shortHeadline": "Headline",
                    "shortIdentifier": "2k629tpvh",
                    "slug": "this-is-slug",
                    "summary105": Array [],
                    "summary125": Array [],
                    "summary145": Array [],
                    "summary160": Array [],
                    "summary175": Array [],
                    "summary225": Array [],
                    "url": "https://ra.io",
                  },
                },
              ],
              "sliceName": "StandardSlice",
            }
          }
          relatedArticlesVisible={false}
          savingEnabled={true}
          sharingEnabled={true}
          spotAccountId=""
          topics={
            Array [
              Object {
                "name": "Topic",
                "slug": "topic",
              },
            ]
          }
        />
      </article>
    </main>
    <AdContainer
      slotName="pixel"
    />
    <AdContainer
      slotName="pixelteads"
    />
    <AdContainer
      slotName="pixelskin"
    />
  </article>
</div>
`;

exports[`4. an article with no content if content is set as null 1`] = `
<div>
  <div
    id="article-marketing-header"
  />
  <article
    data-article-identifier="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
    data-article-sectionname="Some Section"
    data-article-template="mainstandard"
    id="article-main"
  >
    <Head />
    <div>
      <AdContainer
        slotName="header"
      />
    </div>
    <main
      role="main"
    >
      <div>
        <div>
          <div
            data-tc-sticky-placeholder={true}
          />
          <div
            data-tc-sticky-container={true}
          >
            <div>
              <div
                data-tc-sticky-sizer={true}
              >
                <SaveAndShareBar
                  articleHeadline="Some Headline"
                  articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
                  articleUrl="https://url.io"
                  savingEnabled={true}
                  sharingEnabled={true}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        role="article"
      >
        <div
          id="paywall-portal-article-footer"
        />
        <ArticleExtras
          articleHeadline="Some Headline"
          articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
          articleUrl="https://url.io"
          commentsEnabled={true}
          relatedArticleSlice={
            Object {
              "items": Array [
                Object {
                  "article": Object {
                    "__typename": "Article",
                    "bylines": Array [],
                    "hasVideo": false,
                    "headline": "RA Headline",
                    "id": "ra-1",
                    "label": "RA Label",
                    "leadAsset": Object {
                      "__typename": "Image",
                      "crop169": Object {
                        "__typename": "Crop",
                        "url": "https://racrop169.io",
                      },
                      "crop32": Object {
                        "__typename": "Crop",
                        "url": "https://racrop32.io",
                      },
                      "title": "RA Title",
                    },
                    "publicationName": "TIMES",
                    "publishedTime": "2015-03-23T19:39:39.000Z",
                    "savingEnabled": true,
                    "sharingEnabled": true,
                    "shortHeadline": "Headline",
                    "shortIdentifier": "2k629tpvh",
                    "slug": "this-is-slug",
                    "summary105": Array [],
                    "summary125": Array [],
                    "summary145": Array [],
                    "summary160": Array [],
                    "summary175": Array [],
                    "summary225": Array [],
                    "url": "https://ra.io",
                  },
                },
              ],
              "sliceName": "StandardSlice",
            }
          }
          relatedArticlesVisible={false}
          savingEnabled={true}
          sharingEnabled={true}
          spotAccountId=""
          topics={
            Array [
              Object {
                "name": "Topic",
                "slug": "topic",
              },
            ]
          }
        />
      </article>
    </main>
    <AdContainer
      slotName="pixel"
    />
    <AdContainer
      slotName="pixelteads"
    />
    <AdContainer
      slotName="pixelskin"
    />
  </article>
</div>
`;

exports[`5. an article with a nested markup in first paragraph displays a drop cap 1`] = `
<div>
  <div
    id="article-marketing-header"
  />
  <article
    data-article-identifier="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
    data-article-sectionname="Some Section"
    data-article-template="maincomment"
    id="article-main"
  >
    <Head />
    <div>
      <AdContainer
        slotName="header"
      />
    </div>
    <main
      role="main"
    >
      <div>
        <div>
          <div
            data-tc-sticky-placeholder={true}
          />
          <div
            data-tc-sticky-container={true}
          >
            <div>
              <div
                data-tc-sticky-sizer={true}
              >
                <SaveAndShareBar
                  articleHeadline="Some Headline"
                  articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
                  articleUrl="https://url.io"
                  savingEnabled={true}
                  sharingEnabled={true}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        role="article"
      >
        <p>
          <span>
            <b>
              Q
            </b>
          </span>
          <b>
             Some years ago I made the decision to take as a friend a woman who is very opinionated.
          </b>
        </p>
        <p>
          <b>
            When she does come to social events, she dominates.
          </b>
        </p>
        <div
          id="paywall-portal-article-footer"
        />
        <ArticleExtras
          articleHeadline="Some Headline"
          articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
          articleUrl="https://url.io"
          commentsEnabled={true}
          relatedArticlesVisible={false}
          savingEnabled={true}
          sharingEnabled={true}
          spotAccountId=""
        />
      </article>
    </main>
    <AdContainer
      slotName="pixel"
    />
    <AdContainer
      slotName="pixelteads"
    />
    <AdContainer
      slotName="pixelskin"
    />
  </article>
</div>
`;
